[project]
name = "video-modal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.9",
    "azure-search-documents>=12.0.0",
    "azure-storage-blob>=12.30.0",
    "fastapi>=0.139.0",
    "firecrawl-py>=4.31.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langsmith>=0.9.7",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.50.2",
    "yt-dlp>=2026.7.4",
]
